# rsllm

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
fonts/: LICENSE.md  README.md  unpack_fonts.sh
personalities/: 1984.sh  alice.sh  buddha.sh  dharma_show.sh  elmo.sh  emma_goldman.sh  illusion.sh  merkahbah.sh
scripts/: 1984.sh  2024.sh  ai_witch_story.sh  alice.sh  broadcast_personality.sh  buddha.sh  compile.sh  merkabah.sh  mpeg_analyzer.sh  mpeg_analyzer_gpt3.5.sh  mpeg_poetry.sh  quantum.sh  rainbow_story_images.sh  screenplay.sh  story_teller.sh  system_analyzer_gemma2b.sh  system_health.sh  system_health_gpt3.5.sh  twitch.sh
src/: args.rs  audio.rs  candle_gemma.rs  candle_metavoice.rs  candle_mistral.rs  lib.rs  main.rs  mimic3_tts.rs  mpegts.rs  ndi.rs  network_capture.rs  openai_api.rs  openai_tts.rs  pipeline.rs  sd_automatic.rs  stable_diffusion.rs  stream_data.rs  system_stats.rs  twitch_client.rs
