[package]
name = "rsllm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.113", features = ["derive"] }
serde_derive = "1.0.113"
serde_json = "1.0.113"
chrono = "0.4.33"
log = "0.4.20"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.9"
