[package]
name = "rsllm"
description = "Rust AI based pcap for Analyzing Data like MpegTS and SMPTE2110 UDP/TCP Broadcast Feeds"
keywords = ["ai", "broadcast", "mpegts", "capture", "pcap", "zeromq"]
categories = ["command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/groovybits/wiki"
repository = "https://github.com/groovybits/rsllm"
authors = ["Chris Kennedy"]
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
dpdk_enabled = ["capsule"]

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
hf-hub = "0.3.0"
tracing-subscriber = "0.3.7"
tracing-chrome = "0.7.1"
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
tokenizers = { version = "0.15.0", default-features = false }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
metal = { version = "0.27.0", features = ["mps"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
image = { version = "0.24.7", default-features = false, features = [
    "jpeg",
    "png",
] }
capsule = { version = "0.1.5", optional = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.113", features = ["derive"] }
serde_derive = "1.0.113"
serde_json = "1.0.113"
chrono = "0.4.33"
log = "0.4.20"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.9"
futures = "0.3.30"
task = "0.0.1"
bytes = "1.5.0"
sysinfo = "0.23.9"
once_cell = "1.5.2"
pcap = { version = "1.1.0", features = ["all-features", "capture-stream"] }
anyhow = "1.0.79"
lazy_static = "1.4.0"
rtp-rs = "0.6.0"
ahash = "0.8.7"
mpeg2ts-reader = "0.15.0"
scte35-reader = "0.14.0"
h264-reader = "0.7.0"
hex-slice = "0.1.4"
bincode = "1.3.3"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
