[package]
name = "rsllm"
description = "Rust AI Stream Analyzer Twitch Bot"
keywords = ["ai", "stable-diffusion", "ndi", "text-to-speech", "twitch"]
categories = ["command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/rsllm"
license-file = "LICENSE"
homepage = "https://github.com/groovybits/rsllm/wiki"
repository = "https://github.com/groovybits/rsllm"
authors = ["Chris Kennedy"]
version = "0.6.3"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
dpdk_enabled = ["capsule"]
mps = ["candle-core/metal", "candle-nn/metal", "metal", "candle-metal-kernels"]
ndi = ["ndi-sdk-rsllm"]
metavoice = []
audioplayer = ["rodio"]
fonts = ["rusttype", "imageproc"]

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
hf-hub = "0.3.0"
tracing-subscriber = "0.3.7"
tracing-chrome = "0.7.1"
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
tokenizers = { version = "0.19.1", default-features = false }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
metal = { version = "0.27.0", features = ["mps"], optional = true }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
image = { version = "0.24.7", default-features = false, features = [
    "jpeg",
    "png",
] }
capsule = { version = "0.1.5", optional = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.113", features = ["derive"] }
serde_derive = "1.0.113"
serde_json = "1.0.113"
chrono = "0.4.33"
log = "0.4.20"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.9"
futures = "0.3.30"
task = "0.0.1"
bytes = "1.5.0"
sysinfo = "0.23.9"
once_cell = "1.5.2"
pcap = { version = "1.1.0", features = ["all-features", "capture-stream"] }
anyhow = "1.0.79"
lazy_static = "1.4.0"
rtp-rs = "0.6.0"
ahash = "0.8.11"
mpeg2ts-reader = "0.16.0"
scte35-reader = "0.15.0"
h264-reader = "0.7.0"
hex-slice = "0.1.4"
bincode = "1.3.3"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
ndi-sdk-rsllm = { git = "https://github.com/groovybits/rust-ndi.git", version = "0.1.2", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
uuid = { version = "1.7.0", features = ["v4"] }
imageproc = { version = "0.23.0", optional = true }
rusttype = { version = "0.9.3", optional = true }
rodio = { version = "0.17.3", features = ["wav", "mp3"], optional = true }
minimp3 = "0.5.1"
tmi = "0.5.0"
pin-utils = "0.1.0"
hound = "3.5.1"
urlencoding = "2.1.3"
clap_builder = "4.5.2"
safetensors = "0.4.2"
ctrlc = "3.4.4"
base64 = "0.22.0"
rusqlite = "0.31.0"
